apps/clusters/feathre-core/base-apps/semaphore/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: semaphore
spec:
  parentRefs:
    - name: eg
      namespace: envoy
      sectionName: https
  hostnames:
    - semaphore.apps.onelite.feather
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: semaphore
          port: 3000
